[package]
authors = ["Belén Albeza <belen.albeza@gmail.com>"]
name = "aoc-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
regex = "1.5.4"
